<resources>
    <string name="app_name">IpTv</string>
    <string name="logo">Logo</string>
    <string name="entertain_your_life">Entertain Your Life</string>
    <string name="main_desc">SH Pro is a application that provides you all the entertainment within one application, you can enjoy your favourite shows, Movies and live tv.</string>
    <string name="get_started">Get Started</string>
    <string name="login">Login</string>
    <string name="enter_activation_code">Enter Activation Code</string>
    <string name="i_have_username_and_password">I have username and password.</string>
    <string name="click_here">Click Here</string>
    <string name="for_support">"For Support Contact us at: "</string>
    <string name="contact_mail">shpromultimedia@gmail.com</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="back">Back</string>
    <string name="go_upward">Go Upward</string>
    <string name="bg_image">Background Image</string>
    <string name="bg_overlay">Background Overlay</string>
    <string name="login_image">Login Image</string>
    <string name="icons_background">Icons Background</string>
    <string name="logout">Log out</string>
    <string name="search">Search</string>
    <string name="layer">Layer</string>
    <string name="Icon">icon</string>
    <string name="exit_person">Exit Person</string>
    <string name="exit_text">Are you sure you want to exit?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="logout_text">Are you sure you want to Log out?</string>
    <string name="live_tv">Live TV</string>
    <string name="movies">Movies</string>
    <string name="series">Series</string>
    <string name="settings">Settings</string>
    <string name="movie_item">Movie Item</string>
    <string name="selection">Selection</string>
    <string name="selectionTransition">SelectionTransition</string>
    <string name="activate_adult_categories">Activate Adult Categories</string>
    <string name="act_adult_desc">Thanks for using SH TV APP for any order or Support contact at Shpromultimedia@gmail.com</string>
    <string name="enter_code_to_activate_adult_categories">Enter Code to Activate adult Categories</string>
    <string name="enter_here">Enter Here</string>
    <string name="lock_unlock">Lock/Unlock</string>
</resources>