<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryDark"
    tools:context=".settings.EnableAdultActivity">

    <ImageView
        android:id="@+id/side_img"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@drawable/act_adult_side_img"
        android:contentDescription="@string/activate_adult_categories"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/back"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:contentDescription="@string/back"
                android:src="@drawable/ic_arrow_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/liveTv"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:contentDescription="@string/live_tv"
                android:scaleType="fitXY"
                android:src="@drawable/live_tv"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/back"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/movies"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:contentDescription="@string/movies"
                android:scaleType="fitXY"
                android:src="@drawable/movies"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/liveTv"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/series"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:contentDescription="@string/series"
                android:scaleType="fitXY"
                android:src="@drawable/series"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/movies"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/settings"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:contentDescription="@string/settings"
                android:padding="@dimen/_10sdp"
                android:scaleType="fitXY"
                android:src="@drawable/settings"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/series"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/selection"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:alpha="0.2"
                android:background="@color/selectedCategoryColor"
                android:contentDescription="@string/selection"
                android:transitionName="@string/selectionTransition"
                app:layout_constraintBottom_toBottomOf="@+id/settings"
                app:layout_constraintEnd_toEndOf="@+id/settings"
                app:layout_constraintStart_toStartOf="@+id/settings"
                app:layout_constraintTop_toTopOf="@+id/settings" />

            <EditText
                android:id="@+id/searchField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:layout_marginVertical="@dimen/_10sdp"
                android:background="@drawable/search_bar_bg"
                android:drawablePadding="@dimen/_10sdp"
                android:hint="@string/search"
                android:imeOptions="actionSearch"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingVertical="@dimen/_10sdp"
                android:textColor="#BFFFFF"
                android:textColorHint="#BFFFFF"
                app:drawableStartCompat="@drawable/search_bar_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/settings"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/act_adult_desc"
        android:layout_width="@dimen/_180sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/act_adult_desc"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/side_img"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/act_adult_text"
        android:layout_width="@dimen/_180sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@string/enter_code_to_activate_adult_categories"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/side_img"
        app:layout_constraintTop_toBottomOf="@+id/act_adult_desc" />

    <EditText
        android:id="@+id/enterCode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/code_et_bg"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center"
        android:hint="@string/enter_here"
        android:inputType="text"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_6sdp"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="@+id/act_adult_text"
        app:layout_constraintStart_toStartOf="@+id/act_adult_text"
        app:layout_constraintTop_toBottomOf="@+id/act_adult_text" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/adult_cat_btn_bg"
        android:fontFamily="@font/poppins_medium"
        android:paddingHorizontal="@dimen/_30sdp"
        android:text="@string/lock_unlock"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/enterCode"
        app:layout_constraintStart_toStartOf="@+id/enterCode"
        app:layout_constraintTop_toBottomOf="@+id/enterCode" />

</androidx.constraintlayout.widget.ConstraintLayout>