<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/bg_image"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_image" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/bg_overlay"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_overlay" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/_160sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo"
        android:transitionName="imageTransition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/main_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_80sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_80sdp"
        android:alpha="0.7"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center"
        android:maxLines="3"
        android:text="@string/main_desc"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <Button
        android:id="@+id/getStarted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_30sdp"
        android:background="@drawable/main_btn"
        android:fontFamily="@font/poppins_bold"
        android:paddingHorizontal="@dimen/_30sdp"
        android:text="@string/get_started"
        android:textAllCaps="false"
        android:gravity="center"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_desc" />

</androidx.constraintlayout.widget.ConstraintLayout>