<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryDark"
    tools:context=".login.LoginNamePwActivity">

    <ImageView
        android:id="@+id/login_side_img"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:contentDescription="@string/login_image"
        android:src="@drawable/login_side_img"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/_160sdp"
        android:layout_height="@dimen/_140sdp"
        android:contentDescription="@string/logo"
        android:scaleType="centerCrop"
        android:src="@drawable/logo"
        android:transitionName="imageTransition"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/login_side_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_margin="@dimen/_15sdp"
        android:contentDescription="@string/back"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_25sdp"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_30sdp"
        android:fontFamily="@font/poppins_bold"
        android:transitionName="loginTextAnimation"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintEnd_toEndOf="@+id/username"
        app:layout_constraintStart_toStartOf="@+id/username" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_5sdp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/username"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintStart_toStartOf="@+id/username" />

    <EditText
        android:id="@+id/username"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_80sdp"
        android:layout_marginEnd="@dimen/_40sdp"
        android:background="@drawable/ip_field_bg"
        android:inputType="textPersonName"
        android:paddingHorizontal="@dimen/_20sdp"
        android:fontFamily="@font/poppins_regular"
        android:paddingVertical="@dimen/_10sdp"
        android:textColor="@android:color/white"
        android:transitionName="loginFieldAnimation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginBottom="@dimen/_5sdp"
        android:text="@string/password"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password" />

    <EditText
        android:id="@+id/password"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_35sdp"
        android:layout_marginEnd="@dimen/_40sdp"
        android:background="@drawable/ip_field_bg"
        android:inputType="textPassword"
        android:paddingHorizontal="@dimen/_20sdp"
        android:fontFamily="@font/poppins_regular"
        android:paddingVertical="@dimen/_10sdp"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <CheckBox
        android:id="@+id/rememberMe"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:buttonTint="@android:color/white"
        android:text="@string/remember_me"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@id/username"
        app:layout_constraintStart_toStartOf="@id/password"
        app:layout_constraintTop_toBottomOf="@id/password" />

    <Button
        android:id="@+id/login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/login_btn_bg"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:transitionName="loginBtnAnimation"
        app:layout_constraintEnd_toEndOf="@id/username"
        app:layout_constraintStart_toStartOf="@id/username"
        app:layout_constraintTop_toBottomOf="@+id/rememberMe" />

    <LinearLayout
        android:id="@+id/supportLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:transitionName="supportLayoutAnimation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/username"
        app:layout_constraintStart_toStartOf="@+id/username"
        app:layout_constraintTop_toBottomOf="@+id/login">

        <TextView
            android:layout_width="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:layout_height="wrap_content"
            android:text="@string/for_support"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/contact_mail"
            android:layout_width="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:layout_height="wrap_content"
            android:text="@string/contact_mail"
            android:textColor="@android:color/holo_blue_dark" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>